Removed margin-bottom: 0 from h1 in mobile view to prevent small content shift upon loading of jQuery Mobile.

--- a/src/theme-gcwu-fegc/sass/includes/default-mobile.scss
+++ b/src/theme-gcwu-fegc/sass/includes/default-mobile.scss
@@ -124,10 +124,6 @@ body{
 	}
 }
 
-.ui-mobile #wb-main-in h1{
-	margin-bottom:0 !important;
-}
-
 h2,h3,h4,h5,h6,p,blockquote,table,form,img,pre{
 	margin-left:0;
 	margin-right:0;
